--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-11.45MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
-  - {name: 🇭🇰 香港-1.43MB/s(Youtube:不良林), server: 426hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 426hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林), server: 213.183.53.177, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇳🇱 荷兰-310.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇯🇵 日本-11.41MB/s(Youtube:不良林), server: 139.162.124.250, port: 28443, type: trojan, password: fca82897-b178-4824-9c75-abe60c103dda, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林), server: 213.183.53.177, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
-  - {name: 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇨🇳 中国-3.21MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇳🇱 荷兰-1.13MB/s(Youtube:不良林), server: 213.183.59.214, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.78MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.22MB/s(Youtube:不良林), server: 213.183.59.214, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇳🇱 荷兰-1.96MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇬🇧 英国-1.54MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-11.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.43MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-11.41MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.95MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.21MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.13MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
