--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-2.78MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林), server: 213.183.53.177, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.22MB/s(Youtube:不良林), server: 213.183.59.214, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇳🇱 荷兰-1.96MB/s(Youtube:不良林), server: 213.183.59.214, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
+  - {name: 🇳🇱 荷兰-310.0KB/s(Youtube:不良林), server: 213.183.59.190, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.54MB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林), server: 213.183.53.177, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇺🇸 美国-3.57MB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.81MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 未知国家-3.11MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇺🇸 美国-959.4KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.07MB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
+  - {name: 🇺🇸 美国-5.27MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-2.78MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-277.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-288.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.34MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.22MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.96MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-310.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.81MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.42MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.54MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.57MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.81MB/s(Youtube:不良林)
+      - 未知国家-3.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-959.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.27MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
